Add general error message localization

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,4 +1,5 @@
 {
   "dateInputInstruction": "Please enter your birthdate and target lifespan.\nFrom there, the remaining time can be calculated.",
+  "generalError": "Error occurred.",
   "save": "Save"
 }
