--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -1,5 +1,6 @@
 {
   "dateInputInstruction": "Please enter your birthdate and target lifespan.\nFrom there, the remaining time can be calculated.",
   "generalError": "Error occurred.",
-  "save": "Save"
+  "save": "Save",
+  "dayUnit": "d"
 }
