--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -2,5 +2,6 @@
   "dateInputInstruction": "Please enter your birthdate and target lifespan.\nFrom there, the remaining time can be calculated.",
   "generalError": "Error occurred.",
   "save": "Save",
-  "dayUnit": "d"
+  "dayUnit": "d",
+  "privacyPolicyLabel": "Privacy policy"
 }
