Add navigation to tutorial screen from settings screen

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,6 +3,7 @@
   "generalError": "Error occurred.",
   "save": "Save",
   "dayUnit": "d",
+  "tutorialLabel": "App tutorial",
   "privacyPolicyLabel": "Privacy policy",
   "appearanceLabel": "Appearance",
   "systemLabel": "System",
