--- a/lib/l10n/app_ja.arb
+++ b/lib/l10n/app_ja.arb
@@ -3,6 +3,7 @@
   "generalError": "エラーが発生しました。",
   "save": "保存",
   "dayUnit": "日",
+  "tutorialLabel": "アプリの使い方",
   "privacyPolicyLabel": "プライバシーポリシー",
   "appearanceLabel": "表示モード",
   "systemLabel": "システム",
