Add tutorial contents

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -3,6 +3,12 @@
   "generalError": "Error occurred.",
   "dayUnit": "d",
   "tutorialLabel": "App tutorial",
+  "firstTutorialPageTitle": "Date Input",
+  "firstTutorialPageBody": "To use the app, set your birth date and your desired lifespan.",
+  "secondTutorialPageTitle": "Visualize Your Life's Time",
+  "secondTutorialPageBody": "Based on the information you entered, the remaining time is displayed as a percentage.\nTap the battery icon to see the remaining number of days.",
+  "thirdTutorialPageTitle": "How to Update Date Information",
+  "thirdTutorialPageBody": "Press and hold the battery icon to reopen the date input screen.",
   "privacyPolicyLabel": "Privacy policy",
   "appearanceLabel": "Appearance",
   "systemLabel": "System",
