Display data deletion screen after deleting all data

--- a/lib/l10n/app_en.arb
+++ b/lib/l10n/app_en.arb
@@ -18,5 +18,6 @@
   "deleteTitle": "Delete All Data",
   "deleteContent": "Are you sure you want to delete the data?\nDeleted data cannot be restored.",
   "cancelLabel": "Cancel",
-  "deleteLabel": "Delete"
+  "deleteLabel": "Delete",
+  "userDeletionSuccess": "Your data has been successfully deleted.\nThank you for using our app.\nWe hope to see you again in the future.😊"
 }
